--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ void main()
 
     fColor = vColor;
     gl_Position = camera_transform * model_transform  * vPosition;
-    gl_Position.z = -gl_Position.z;
+//    gl_Position.z = -gl_Position.z; 
 }
 </script>
 
