--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@ main()
 }
 </script>
 
-<script type="text/javascript" src="Common/webgl-utils.js"></script>
-<script type="text/javascript" src="Common/initShaders.js"></script>
-<script type="text/javascript" src="Common/MV.js"></script>
+<script type="text/javascript" src="common/webgl-utils.js"></script>
+<script type="text/javascript" src="common/InitShaders.js"></script>
+<script type="text/javascript" src="common/MV.js"></script>
 <script type="text/javascript" src="source.js"></script>
 
 <body>
